# mediatools

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zw/mediatools/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: MP4Util.h  java_MediaTools.h  log.h
app/src/main/cpp/src/: MP4Util.cpp  java_MediaTools.cpp
app/src/main/java/com/zw/mediatools/: App.java  CMDActivity.kt  MainActivity.kt  MediaTools.java
app/src/main/java/com/zw/mediatools/activity/: CMDActivity.kt  PlayerActivity.kt
app/src/main/res/layout/: activity_cmd.xml  activity_main.xml  activity_player.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/zw/mediatools/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
